# gateway

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile_base  README.md  flake.nix
chart/: Chart.yaml  values.yaml
chart/crds/: apidefinitions.yaml
chart/templates/: _helpers.tpl  config.yaml  gateway.yaml  service_account.yaml
gateway/: Cargo.toml  config.yaml
gateway/src/: auth.rs  config.rs  main.rs  permission.rs  runtime_config.rs
macros/: Cargo.toml
macros/src/: api.rs  endpoint.rs  lib.rs  util.rs
macros/tests/: compiletest.rs
macros/tests/gateway_config/: expect-api.rs  expect-api.stderr  expect-array.rs  expect-array.stderr
macros/tests/gateway_config_nightly/: expect-single-segment-path.rs  expect-single-segment-path.stderr
src/: api.rs  auth.rs  endpoint.rs  fetch_crd.rs  main.rs  metrics.rs  permission.rs  route.rs  runtime_config.rs  websocket.rs
tests/: test_apidefinition_simple.yaml
