[package]
name = "gateway"
version = "0.2.0"
authors = ["pguenezan <paul@guenezan.me>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.9.0", features = ["full"] }
http-body = "0.4.2"
jsonwebtoken = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
bytes = "1"
lazy_static = "1.4.0"
prometheus = "0.12.0"
regex = "1"
once_cell = "1.7.2"
http-serde = "1.0.1"
log = "0.4.0"
env_logger = "0.8.3"
kube = { version = "0.58.1", features = ["derive"] }
kube-runtime = "0.58.1"
k8s-openapi = { version = "0.12.0", default-features = false, features = ["v1_20"] }
url = "2.2.0"
schemars = "0.8.0"
futures = "0.3.8"

