[package]
name = "gateway"
version = "1.0.3"
authors = ["pguenezan <paul@guenezan.me>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.16.1", features = ["full"] }
http-body = "0.4.4"
jsonwebtoken = "8.0.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.9"
bytes = "1.1.0"
prometheus = "0.13.0"
regex = "1.5.4"
once_cell = "1.9.0"
http-serde = "1.1.0"
log = "0.4.14"
env_logger = "0.10"
kube = { version = "0.68.0", features = ["derive"] }
kube-runtime = "0.68.0"
k8s-openapi = { version = "0.14.0", default-features = false, features = ["v1_21"] }
url = "2.2.2"
schemars = "0.8.8"
futures = "0.3.21"
hyper-tungstenite = "0.5.0"
tokio-tungstenite = "0.16.1"
anyhow = "1.0.53"
