[package]
name = "gateway"
version = "2.2.0"
authors = ["pguenezan <paul@guenezan.me>"]
edition = "2021"

[features]
remove_authorization_header = []

[dependencies]
anyhow = "1.0.53"
bytes = "1.1.0"
env_logger = "0.11"
futures = "0.3.21"
http-body = "1.0"
http-body-util = "0.1"
http-serde = "2.1"
hyper-tungstenite = "0.15"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "server"] }
hyper = { version = "1.4", features = ["full"] }
jsonwebtoken = "9.3"
k8s-openapi = { version = "0.23", default-features = false, features = ["v1_31"] }
kube-runtime = "0.96"
kube = { version = "0.96", features = ["derive"] }
log = "0.4.14"
prometheus = "0.13.0"
regex = "1.5.4"
schemars = "0.8.8"
serde_json = "1.0.78"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.9"
tokio-tungstenite = "0.24"
tokio = { version = "1.16", features = ["full"] }
tungstenite = { version = "0.24", features = ["url"] }
url = "2.5"
