[package]
name = "gateway"
version = "0.1.0"
authors = ["pguenezan <paul@guenezan.me>"]
edition = "2018"

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
macros = { path = "../macros" }
prometheus = "0.10.0"
