[package]
name = "gateway"
version = "0.1.0"
authors = ["pguenezan <paul@guenezan.me>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body = "0.4"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
macros = { path = "../macros" }
prometheus = "0.10.0"
