[package]
name = "macros"
version = "0.1.0"
authors = ["pguenezan <paul@guenezan.me>"]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
url = "2.2.0"
regex = "1"

[dev-dependencies]
trybuild = "1.0"

[lib]
proc-macro = true
